@@ -4,7 +4,8 @@ CHANGES-1.1.txt
 CHANGES IN CUPS V1.1.19
 
 	- The PostScript filter now supports binary PostScript
-	  files.
+	  files and files beginning with the PJL language escape
+	  sequence.
 	- The PPD API now provides additional information from
 	  the PPD file.
 	- The USB backend didn't compile on Solaris Intel.
